Settings: Volume Long Press to Skip Tracks [2/2]
* Thanks Sahul Krishan for the great animation
* @ritujb: Fix default value mismatch with framework in playback control
* Adapted for styx by @neel685

Change-Id: Ifa3d0987a0d54afd1f56e1d4a7488f428338c757
Signed-off-by: Mesquita <mickaelmendes50@gmail.com>
Signed-off-by: neel685 <neel.mandal@gmail.com>

--- a/res/values/styx_strings.xml
+++ b/res/values/styx_strings.xml
@@ -66,4 +66,9 @@
     <string name="network_traffic_refresh_interval_summary">Duration after which speed is remeasured</string>
     <string name="unit_seconds">seconds</string>
 
+
+    <!-- Volume button music control -->
+    <string name="volume_button_music_control_title">Playback control</string>
+    <string name="volume_button_music_control_summary">When the screen is off, long-pressing volume keys will skip music tracks</string>
+
 </resources>
