Settings: Add switch for linked ring and media notification volumes [2/2]
Author: Dan Pasanen <dan.pasanen@gmail.com>
Date:   Wed Oct 30 09:22:30 2019 -0500

    VolumePanel: fix showing notification volume slider when unlinked

    * volume_link_notification lives in Settings.Secure not LineageSettings.Secure
    * Set max panel slices to 6. We could have up to 5 volumes to control and
      MEDIA_OUTPUT_INDICATOR_SLICE_URI counts as one slice as well.

    Change-Id: I0a4c7db1c92e778fba669931259cd52164b1df65

Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4

--- a/res/values/styx_strings.xml
+++ b/res/values/styx_strings.xml
@@ -33,4 +33,7 @@
     <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
     <string name="custom_seekbar_default_value_is_set">Default value is set</string>
 
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
+
 </resources>
