Settings: Add back SELinux info
Change-Id: I9e0d09416157a0eb542f8934bfef269c41eff363
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/res/values/styx_strings.xml
+++ b/res/values/styx_strings.xml
@@ -17,4 +17,10 @@
 
     <!-- Title for connected TWS device group [CHAR LIMIT=none]-->
     <string name="connected_tws_device_saved_title">Saved Earbuds</string>
+
+    <!-- SELinux Status -->
+    <string name="selinux_status">SELinux status</string>
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
 </resources>
