--- a/res/xml/wifi_network_details_fragment2.xml
+++ b/res/xml/wifi_network_details_fragment2.xml
@@ -24,7 +24,7 @@
         android:layout="@layout/settings_entity_header"
         android:selectable="false"
         android:order="-10000"
-        settings:allowDividerBelow="true"/>
+        settings:allowDividerBelow="false"/>
 
     <com.android.settings.datausage.DataUsageSummaryPreference
         android:key="status_header"
@@ -42,14 +42,14 @@
     <com.android.settingslib.widget.ActionButtonsPreference
         android:key="buttons"
         android:selectable="false"
-        settings:allowDividerAbove="true"/>
+        settings:allowDividerAbove="false"/>
 
     <!-- General Details Preferences -->
     <Preference
         android:key="signal_strength"
         android:title="@string/wifi_signal"
         android:selectable="false"
-        settings:allowDividerAbove="true"/>
+        settings:allowDividerAbove="false"/>
 
     <Preference
         android:key="frequency"
@@ -81,20 +81,20 @@
         android:key="subscription_detail"
         android:title="@string/wifi_subscription"
         android:summary="@string/wifi_subscription_summary"
-        settings:allowDividerAbove="true"/>
+        settings:allowDividerAbove="false"/>
 
     <SwitchPreference
         android:key="auto_connect"
         android:title="@string/wifi_auto_connect_title"
         android:summary="@string/wifi_auto_connect_summary"
-        settings:allowDividerAbove="true"/>
+        settings:allowDividerAbove="false"/>
 
     <!-- Add device Preference -->
     <Preference
         android:key="add_device_to_network"
         android:title="@string/wifi_dpp_add_device"
         android:summary="@string/wifi_dpp_connect_network_using_qr_code"
-        settings:allowDividerAbove="true"/>
+        settings:allowDividerAbove="false"/>
 
     <!-- Network Details -->
     <PreferenceCategory
