About: add Styx branding
Signed-off-by: Gagan Malvi <malvi@aospa.co>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,10 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+   <PreferenceScreen
+       android:layout="@layout/styx_branding_layout"
+       android:key="styx_branding" />
+
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
