--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -310,6 +310,7 @@
     <style name="TextAppearance.SearchBar"
            parent="@*android:style/TextAppearance.DeviceDefault.Widget.Toolbar.Subtitle">
         <item name="android:textSize">@dimen/search_bar_text_size</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
     <style name="TextAppearance.HomepageCardTitle"
@@ -480,7 +481,8 @@
     </style>
 
     <style name="SearchBarStyle">
-        <item name="cardCornerRadius">38dp</item>
+        <item name="android:layout_margin">@dimen/search_bar_margin</item>
+        <item name="cardCornerRadius">@*android:dimen/config_dialogCornerRadius</item>
         <item name="enforceMaterialTheme">true</item>
         <item name="cardElevation">3dp</item>
         <item name="shapeAppearance">@null</item>
